# eb-create-environment

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
eb_create_environment/: database.py  default_config.yml  eb_setup.py  script.py  utils.py  vpc.py
